Fixes un-visible border radius on main content.

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -26,7 +26,8 @@
 	margin-right: auto;
 	margin-left: auto;
 	background-color: white;
-    border-radius: 0.3rem;
+	border-radius: 0.3rem;
+	padding-bottom: 0.4rem;
 
 }
 
